2007-10-17  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: build updates
	* am/info.am: build updates
	* doc/papers/Makefile.am: build updates
	* m4/openss7.m4: build updates
	* scripts/missing2: build updates

2007-10-16  Brian Bidulock  <bidulock@openss7.org>

	* configure.ac: fixed AC_FUNC_REALLOC cross-compile problem
	* doc/man/Makefile.am: add strmib manpage

2007-10-15  Brian Bidulock  <bidulock@openss7.org>

	* m4/agent.m4: added SNMP agent macros
	* src/snmp/mib_modules.h: added mangled header file
	* acinclude.m4: converted to use agent.m4 macros
	* m4/lib32.m4: added AC_CHECK_LIB with prologue
	* m4/snmp.m4: added prologues to libwrap dependent checks
	* src/snmp/strMIB.c: mods for caching scalars
	* src/snmp/mibs/OPENSS7-STREAMS-MIB.mib: corrections to strStrhold type
	* Makefile.am: added WITH_SNMP_AGENT conditional
	* m4/agent.m4: added WITH_SNMP_AGENT conditional
	* src/snmp/strMIB.c: correct include file for net-snmp 5.2.1
	* src/snmp/mib_modules.h: net-snmp build corrections
	* src/snmp/strMIB.c: net-snmp build corrections

2007-10-13  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: added strmib agent
	* acinclude.m4: added checks for SNMP
	* doc/man/streams.refs: added AgentX reference
	* doc/man/man4/sad.4.man: documentation updates
	* doc/man/man4/sc.4.man: documentation updates
	* include/sys/streams/sc.h: changed tunable format, added stats
	* include/sys/streams/strsubr.h: export Strinfo for sc(4) stats
	* m4/snmp.m4: interdependent libs
	* src/kernel/strsched.c: changes to compile under 2.6.22.5-49.fc6
	* src/kernel/strsched.h: export Strinfo for sc(4) stats
	* src/kernel/strspecfs.c: changes to compile under 2.6.22.5-49.fc6
	* src/kernel/strutil.c: changes to compile under 2.6.22.5-49.fc6
	* src/modules/sc.c: new input-output controls
	* src/util/strace.c: defect correction by inspection
	* src/util/strerr.c: defect correction by inspection

	* doc/man/man3/snmp_logging.3.man: added snmp docs